--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.4",
-    "mongoose": "^8.0.3",
-    "axios": "^1.6.3"
+    "mongoose": "^8.0.3"
   }
 }
